Overflow issue

--- a/Content/Sass/_Global.scss
+++ b/Content/Sass/_Global.scss
@@ -239,7 +239,7 @@ textarea{
 }
 
 html {
-	//overflow-y:scroll; // Chrome App Override
+	overflow-y:scroll; // Chrome App Override
 }
 
 @media all and (min-width: 38em) {
